# M_19_prod

./: Dockerfile  pyproject.toml  requirments.txt
mysite/mysite/: settings.py
