[tool.poetry]
name = "m-19-myproject"
version = "0.1.0"
description = ""
authors = ["Александр Пономаренко <ponomarenko.100299@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
