[tool.poetry]
name = "m-19-myproject"
version = "0.1.0"
description = ""
authors = ["Александр Пономаренко <ponomarenko.100299@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
django-rest-framework = "^0.1.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
